[package]
name = "mqtt-recorder-rs"
version = "1.3.0"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = "Simple MQTT logger"
license = "MIT"
repository = "https://github.com/TotalKrill/mqtt-recorder-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = { version = "0.4"}
rumqttc = "0.24.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros", "time"]}
base64 = "0.13"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
simple_logger = "1.11"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
strip = true
